tests/ui/foreign_set.jet
fn main() {
    set limit = 10;
    print(limit);
}
